<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back_ground"
    tools:context=".RegisterActivity">


    

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/Registertitle"
        android:text="@string/register_title"
        android:textSize="35dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:gravity="center"
        android:layout_margin="65dp"/>

   <EditText
       android:layout_width="match_parent"
       android:layout_height="60dp"
       android:id="@+id/etusername"
       android:layout_below="@+id/Registertitle"
       android:background="#30ffffff"
       android:hint="@string/username_hint"
       android:textColorHint="@color/white"
       android:textColor="@color/white"
       android:layout_margin="10dp"
       android:padding="20dp"
       android:drawableLeft="@drawable/baseline_account_circle_24"
       android:drawablePadding="20dp"
       />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/etemail"
        android:layout_below="@+id/etusername"
        android:background="#30ffffff"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_email_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/etpassword"
        android:layout_below="@+id/etemail"
        android:background="#30ffffff"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="20dp"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:id="@+id/etconfirm_password"
        android:layout_below="@+id/etpassword"
        android:background="#30ffffff"
        android:hint="@string/confirm_password_hint"
        android:inputType="textPassword"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_margin="10dp"
        android:padding="20dp"
        android:drawableLeft="@drawable/baseline_lock_24"
        android:drawablePadding="30dp"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/etconfirm_password"
        android:layout_marginTop="20dp"
        android:id="@+id/bregister"
        android:text="@string/register_title"
        android:textSize="20dp"/>

</RelativeLayout>

