<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFDE7"
    tools:context=".MainActivity">

    <!-- Transparent overlay with theme color -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#03A9F4"
        android:alpha="0.6" />
    <!-- App logo and title -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_above="@+id/card_view"
        android:padding="28dp">

        <ImageView
            android:layout_width="118dp"
            android:layout_height="100dp"
            android:src="@drawable/twotone_delivery_dining_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="DeliverEase"
            android:textStyle="bold"
            android:fontFamily="sans-serif-medium"
            android:textSize="32sp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

    <!-- CardView Login Form -->
    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="-20dp"
        app:cardCornerRadius="28dp"
        app:cardElevation="10dp"
        app:cardBackgroundColor="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="70dp"
            android:padding="28dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_hello"
                android:textColor="#57B2DE"
                android:textSize="32sp"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/login_instructions"
                android:textColor="#666666" />

            <!-- Email -->
            <View android:layout_height="20dp" android:layout_width="match_parent"/>
            <TextView
                android:text="@string/email"
                android:textColor="#666666"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etMail"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textEmailAddress"
                android:hint="example@gmail.com"
                android:backgroundTint="#57B2DE"
                android:drawableRight="@drawable/sharp_email_24" />

            <!-- Password -->
            <View android:layout_height="20dp" android:layout_width="match_parent"/>
            <TextView
                android:text="@string/password"
                android:textColor="#666666"
                android:textStyle="bold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:inputType="textPassword"
                android:hint="ABCabc123##"
                android:backgroundTint="#57B2DE"
                android:drawableRight="@drawable/baseline_lock_24_sign_up" />

            <!-- Login Button -->
            <View android:layout_height="16dp" android:layout_width="match_parent"/>
            <Button
                android:id="@+id/blogin"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:backgroundTint="#03A9F4"
                android:textColor="#FFFFFF"
                android:text="@string/login_button" />

            <!-- Google Login -->
            <View android:layout_height="12dp" android:layout_width="match_parent"/>
            <ImageButton
                android:id="@+id/bgoogle"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:src="@drawable/google_icon_round"
                android:background="#FFFFFF"
                android:contentDescription="@string/google_login"
                android:elevation="2dp"
                android:scaleType="centerInside" />

            <!-- Register -->
            <View android:layout_height="12dp" android:layout_width="match_parent"/>
            <TextView
                android:id="@+id/tvRegister"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/register_prompt"
                android:textColor="#57B2DE"
                android:textStyle="bold" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</RelativeLayout>
